Revamp main page

--- a/www/index.htm
+++ b/www/index.htm
@@ -1,26 +1,48 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css" />
+<meta http-equiv="content-security-policy" content="
+	base-uri 'self';
+	default-src 'self';
+	img-src 'self';
+	frame-src 'none';
+	connect-src 'none';
+	font-src 'none';
+	media-src 'none';
+	object-src 'none';
+	script-src 'self';
+	style-src 'self';
+	form-action 'none';
+">
 <title>((DOMAIN))</title>
-<style>
-body {
-	font: 1em sans-serif;
-	color: #444444;
-	text-align: center;
-	padding: 50px 20px 20px;
-	margin: 0;
-}
-a:link, a:visited {
-	color: #4466AA;
-	text-decoration: underline;
-}
-a:active, a:hover {
-	color: #6699BB;
-	text-decoration: none;
-}
-</style>
+<link rel="icon" href="favicon.png">
 </head>
 <body>
-Nothing to see here&hellip;
-try <a href="https://sequence.((DOMAIN))/">https://sequence.((DOMAIN))/</a> instead for now.
+<h1>Stuff</h1>
+
+<a class="section" href="https://sequence.((DOMAIN))/">
+<h2>Sequence Diagram</h2>
+<p>An open-source, online editor for Sequence Diagrams.</p>
+<p class="link">https://sequence.((DOMAIN))/</p>
+</a>
+
+<br />
+
+<a class="section" href="https://chance.((DOMAIN))/">
+<h2>Chance</h2>
+<p>A mobile-friendly page for all things random.</p>
+<p class="link">https://chance.((DOMAIN))/</p>
+</a>
+
+<br />
+
+<a class="section" href="https://server.((DOMAIN))/">
+<h2>Look Busy</h2>
+<p>For when you need to look productive.</p>
+<p class="link">https://server.((DOMAIN))/</p>
+</a>
+
 </body>
 </html>
