Add refacto deployment

--- a/www/index.htm
+++ b/www/index.htm
@@ -30,6 +30,14 @@
 
 <br />
 
+<a class="section" href="https://retro.((DOMAIN))/">
+<h2>Refacto</h2>
+<p>An open-source remote retro facilitation tool.</p>
+<p class="link">https://retro.((DOMAIN))/</p>
+</a>
+
+<br />
+
 <a class="section" href="https://chance.((DOMAIN))/">
 <h2>Chance</h2>
 <p>A mobile-friendly page for all things random.</p>
