Add error pages and ads.txt to root site to reduce logged errors

--- a/www/index.htm
+++ b/www/index.htm
@@ -2,22 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="/style.css" />
 <meta http-equiv="content-security-policy" content="
 	base-uri 'self';
-	default-src 'self';
+	default-src 'none';
 	img-src 'self';
-	frame-src 'none';
-	connect-src 'none';
-	font-src 'none';
-	media-src 'none';
-	object-src 'none';
-	script-src 'self';
 	style-src 'self';
 	form-action 'none';
 ">
 <title>((DOMAIN))</title>
-<link rel="icon" href="favicon.png">
+<link rel="icon" href="/favicon.png">
 </head>
 <body>
 <h1>Stuff</h1>
