List more services, switch to hexagon grid display

--- a/www/index.htm
+++ b/www/index.htm
@@ -15,36 +15,56 @@
 </head>
 <body>
 <h1>Stuff</h1>
-
-<a class="section" href="https://sequence.((DOMAIN))/">
+<main>
+<a class="item" href="https://sequence.((DOMAIN))/">
 <h2>Sequence Diagram</h2>
-<p>An open-source, online editor for Sequence Diagrams.</p>
+<p class="info">An open-source, online editor for Sequence Diagrams.</p>
 <p class="link">https://sequence.((DOMAIN))/</p>
 </a>
 
-<br />
-
-<a class="section" href="https://retro.((DOMAIN))/">
+<a class="item" href="https://retro.((DOMAIN))/">
 <h2>Refacto</h2>
-<p>An open-source remote retro facilitation tool.</p>
+<p class="info">An open-source remote retro facilitation tool.</p>
 <p class="link">https://retro.((DOMAIN))/</p>
 </a>
 
-<br />
-
-<a class="section" href="https://chance.((DOMAIN))/">
+<a class="item" href="https://chance.((DOMAIN))/">
 <h2>Chance</h2>
-<p>A mobile-friendly page for all things random.</p>
+<p class="info">A mobile-friendly page for all things random.</p>
 <p class="link">https://chance.((DOMAIN))/</p>
 </a>
 
-<br />
-
-<a class="section" href="https://server.((DOMAIN))/">
+<a class="item" href="https://server.((DOMAIN))/">
 <h2>Look Busy</h2>
-<p>For when you need to look productive.</p>
+<p class="info">For when you need to look productive.</p>
 <p class="link">https://server.((DOMAIN))/</p>
 </a>
 
+<a class="item" href="https://blot.((DOMAIN))/">
+<h2>SpinBlot</h2>
+<p class="info">Inkblot-like screensaver-style animation.</p>
+<p class="link">https://blot.((DOMAIN))/</p>
+</a>
+
+<a class="item" href="https://qr.((DOMAIN))/">
+<h2>Lean QR</h2>
+<p class="info">QR code generator.</p>
+<p class="link">https://qr.((DOMAIN))/</p>
+</a>
+
+<a class="item" href="https://countdown.((DOMAIN))/">
+<h2>Countdown</h2>
+<p class="info">Solvers for Countdown challenges.</p>
+<p class="link">https://countdown.((DOMAIN))/</p>
+</a>
+
+<div class="skip"></div>
+
+<a class="item" href="https://regex.((DOMAIN))/">
+<h2>Nonogram Regex</h2>
+<p class="info">Solvers for regular expression nonograms.</p>
+<p class="link">https://regex.((DOMAIN))/</p>
+</a>
+</main>
 </body>
 </html>
