--- a/www/index.htm
+++ b/www/index.htm
@@ -16,55 +16,55 @@
 <body>
 <h1>Stuff</h1>
 <main>
-<a class="item" href="https://sequence.((DOMAIN))/">
+<a class="item" href="https://sequence.((DOMAIN))/"><section>
 <h2>Sequence Diagram</h2>
 <p class="info">An open-source, online editor for Sequence Diagrams.</p>
 <p class="link">https://sequence.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://retro.((DOMAIN))/">
+<a class="item" href="https://retro.((DOMAIN))/"><section>
 <h2>Refacto</h2>
 <p class="info">An open-source remote retro facilitation tool.</p>
 <p class="link">https://retro.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://chance.((DOMAIN))/">
+<a class="item" href="https://chance.((DOMAIN))/"><section>
 <h2>Chance</h2>
 <p class="info">A mobile-friendly page for all things random.</p>
 <p class="link">https://chance.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://server.((DOMAIN))/">
+<a class="item" href="https://server.((DOMAIN))/"><section>
 <h2>Look Busy</h2>
 <p class="info">For when you need to look productive.</p>
 <p class="link">https://server.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://blot.((DOMAIN))/">
+<a class="item" href="https://blot.((DOMAIN))/"><section>
 <h2>SpinBlot</h2>
 <p class="info">Inkblot-like screensaver-style animation.</p>
 <p class="link">https://blot.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://qr.((DOMAIN))/">
+<a class="item" href="https://qr.((DOMAIN))/"><section>
 <h2>Lean QR</h2>
 <p class="info">QR code generator.</p>
 <p class="link">https://qr.((DOMAIN))/</p>
-</a>
+</section></a>
 
-<a class="item" href="https://countdown.((DOMAIN))/">
+<a class="item" href="https://countdown.((DOMAIN))/"><section>
 <h2>Countdown</h2>
 <p class="info">Solvers for Countdown challenges.</p>
 <p class="link">https://countdown.((DOMAIN))/</p>
-</a>
+</section></a>
 
 <div class="skip"></div>
 
-<a class="item" href="https://regex.((DOMAIN))/">
+<a class="item" href="https://regex.((DOMAIN))/"><section>
 <h2>Nonogram Regex</h2>
 <p class="info">Solvers for regular expression nonograms.</p>
 <p class="link">https://regex.((DOMAIN))/</p>
-</a>
+</section></a>
 </main>
 </body>
 </html>
