Add pitch check and raycast projects, and links to github/gitlab/npm. Improve tile layout.

--- a/www/index.htm
+++ b/www/index.htm
@@ -8,18 +8,24 @@
 </head>
 <body>
 <h1>Stuff</h1>
-<main>
+<section class="itemlist">
+<div class="spacer"></div>
+
 <a class="item" href="https://sequence.((DOMAIN))/"><section>
 <h2>Sequence Diagram</h2>
 <p class="info">An open-source, online editor for Sequence Diagrams.</p>
 <p class="link">https://sequence.((DOMAIN))/</p>
 </section></a>
 
+<div class="spacer"></div>
+
 <a class="item" href="https://retro.((DOMAIN))/"><section>
 <h2>Refacto</h2>
 <p class="info">An open-source remote retro facilitation tool.</p>
 <p class="link">https://retro.((DOMAIN))/</p>
 </section></a>
+
+<div class="spacer"></div>
 
 <a class="item" href="https://chance.((DOMAIN))/"><section>
 <h2>Chance</h2>
@@ -51,13 +57,41 @@
 <p class="link">https://countdown.((DOMAIN))/</p>
 </section></a>
 
-<div class="skip"></div>
-
 <a class="item" href="https://regex.((DOMAIN))/"><section>
 <h2>Nonogram Regex</h2>
 <p class="info">Solvers for regular expression nonograms.</p>
 <p class="link">https://regex.((DOMAIN))/</p>
 </section></a>
-</main>
+
+<a class="item" href="https://tune.((DOMAIN))/"><section>
+<h2>Pitch Check</h2>
+<p class="info">Tuner for stringed instruments.</p>
+<p class="link">https://tune.((DOMAIN))/</p>
+</section></a>
+
+<a class="item" href="https://davidje13.github.io/Raycast/experiment/mountains/"><section>
+<h2>Raycast Mountains</h2>
+<p class="info">Landscape rendering using raycasting.</p>
+<p class="link">https://davidje13.github.io/Raycast/experiment/mountains/</p>
+</section></a>
+</section>
+<section>
+<h2>Libraries</h2>
+<ul>
+<li><a href="https://www.npmjs.com/package/lean-qr">lean-qr</a></li>
+<li><a href="https://www.npmjs.com/package/react-hook-awaited">react-hook-awaited</a></li>
+<li><a href="https://www.npmjs.com/package/react-portal-target">react-portal-target</a></li>
+<li><a href="https://www.npmjs.com/package/superwstest">superwstest</a></li>
+<li><a href="https://www.npmjs.com/package/svg-sequence-diagram">svg-sequence-diagram</a></li>
+</ul>
+</section>
+<section>
+<h2>Other Stuff</h2>
+<ul>
+<li><a href="https://github.com/davidje13">GitHub</a></li>
+<li><a href="https://gitlab.com/davidje13">GitLab</a></li>
+<li><a href="https://www.npmjs.com/~davidje13">NPM</a></li>
+</ul>
+</section>
 </body>
 </html>
