--- a/www/index.htm
+++ b/www/index.htm
@@ -14,7 +14,7 @@
 <a class="item" href="https://sequence.((DOMAIN))/"><section>
 <h2>Sequence Diagram</h2>
 <p class="info">An open-source, online editor for Sequence Diagrams.</p>
-<p class="link">https://sequence.((DOMAIN))/</p>
+<p class="link">sequence.((DOMAIN))</p>
 </section></a>
 
 <div class="spacer"></div>
@@ -22,57 +22,63 @@
 <a class="item" href="https://retro.((DOMAIN))/"><section>
 <h2>Refacto</h2>
 <p class="info">An open-source remote retro facilitation tool.</p>
-<p class="link">https://retro.((DOMAIN))/</p>
+<p class="link">retro.((DOMAIN))</p>
 </section></a>
 
 <div class="spacer"></div>
 
-<a class="item" href="https://chance.((DOMAIN))/"><section>
-<h2>Chance</h2>
-<p class="info">A mobile-friendly page for all things random.</p>
-<p class="link">https://chance.((DOMAIN))/</p>
-</section></a>
-
-<a class="item" href="https://server.((DOMAIN))/"><section>
-<h2>Look Busy</h2>
-<p class="info">For when you need to look productive.</p>
-<p class="link">https://server.((DOMAIN))/</p>
-</section></a>
-
-<a class="item" href="https://blot.((DOMAIN))/"><section>
-<h2>SpinBlot</h2>
-<p class="info">Inkblot-like screensaver-style animation.</p>
-<p class="link">https://blot.((DOMAIN))/</p>
+<a class="item" href="https://tune.((DOMAIN))/"><section>
+<h2>Pitch Check</h2>
+<p class="info">A tuner for stringed instruments.</p>
+<p class="link">tune.((DOMAIN))</p>
 </section></a>
 
 <a class="item" href="https://qr.((DOMAIN))/"><section>
 <h2>Lean QR</h2>
 <p class="info">QR code generator.</p>
-<p class="link">https://qr.((DOMAIN))/</p>
+<p class="link">qr.((DOMAIN))</p>
+</section></a>
+
+<a class="item" href="https://chance.((DOMAIN))/"><section>
+<h2>Chance</h2>
+<p class="info">A mobile-friendly page for all things random.</p>
+<p class="link">chance.((DOMAIN))</p>
+</section></a>
+
+<a class="item" href="https://minesweeper.((DOMAIN))/"><section>
+<h2>Minesweeper</h2>
+<p class="info">A clone of the game Minesweeper.</p>
+<p class="link">minesweeper.((DOMAIN))</p>
+</section></a>
+
+<a class="item" href="https://blot.((DOMAIN))/"><section>
+<h2>SpinBlot</h2>
+<p class="info">Inkblot-like screensaver-style animation.</p>
+<p class="link">blot.((DOMAIN))</p>
 </section></a>
 
 <a class="item" href="https://countdown.((DOMAIN))/"><section>
 <h2>Countdown</h2>
 <p class="info">Solvers for Countdown challenges.</p>
-<p class="link">https://countdown.((DOMAIN))/</p>
+<p class="link">countdown.((DOMAIN))</p>
 </section></a>
 
 <a class="item" href="https://regex.((DOMAIN))/"><section>
 <h2>Nonogram Regex</h2>
 <p class="info">Solvers for regular expression nonograms.</p>
-<p class="link">https://regex.((DOMAIN))/</p>
+<p class="link">regex.((DOMAIN))</p>
 </section></a>
 
-<a class="item" href="https://tune.((DOMAIN))/"><section>
-<h2>Pitch Check</h2>
-<p class="info">Tuner for stringed instruments.</p>
-<p class="link">https://tune.((DOMAIN))/</p>
+<a class="item" href="https://server.((DOMAIN))/"><section>
+<h2>Look Busy</h2>
+<p class="info">For when you need to look productive.</p>
+<p class="link">server.((DOMAIN))</p>
 </section></a>
 
 <a class="item" href="https://davidje13.github.io/Raycast/experiment/mountains/"><section>
 <h2>Raycast Mountains</h2>
 <p class="info">Landscape rendering using raycasting.</p>
-<p class="link">https://davidje13.github.io/Raycast/experiment/mountains/</p>
+<p class="link">davidje13.github.io/Raycast/experiment/mountains</p>
 </section></a>
 </section>
 <section>
