Make local development of static website content easier

--- a/www/error.htm
+++ b/www/error.htm
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="/style.css" />
+<link rel="stylesheet" href="./static/style.css" />
 <title>((ERROR)) &mdash; ((DOMAIN))</title>
-<link rel="icon" href="/favicon.png">
+<link rel="icon" href="./static/favicon.png">
 </head>
 <body class="error">
 <header>
