--- a/www/index.htm
+++ b/www/index.htm
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="/style.css" />
+<link rel="stylesheet" href="./static/style.css" />
 <title>((DOMAIN))</title>
-<link rel="icon" href="/favicon.png">
+<link rel="icon" href="./static/favicon.png">
 </head>
 <body>
 <h1>Stuff</h1>
