Use ico format for favicon, provide 16, 32, 64 sizes

--- a/www/index.htm
+++ b/www/index.htm
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./static/style.css" />
 <title>((DOMAIN))</title>
-<link rel="icon" href="./static/favicon.png">
+<link rel="icon" href="./static/favicon.ico">
 </head>
 <body>
 <h1>Stuff</h1>
