--- a/www/error.htm
+++ b/www/error.htm
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./static/style.css" />
 <title>((ERROR)) &mdash; ((DOMAIN))</title>
-<link rel="icon" href="./static/favicon.png">
+<link rel="icon" href="./static/favicon.ico">
 </head>
 <body class="error">
 <header>
