--- a/www/static/index.htm
+++ b/www/static/index.htm
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="./static/style.css" />
+<link rel="stylesheet" href="./style.css" />
 <title>((DOMAIN))</title>
-<link rel="icon" href="./static/favicon.ico">
+<link rel="icon" href="./favicon.ico">
 </head>
 <body>
 <h1>Stuff</h1>
